--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-is": "^17.0.2",
     "react-markdown": "^5.0.3",
+    "sharp": "^0.28.3",
     "styled-components": "^5.1.3",
     "styled-jsx": "^3.2.5",
     "tina-graphql-gateway": "0.2.11",
