refactor landing page to cover page

--- a/.tina/__generated__/config/settings.yml
+++ b/.tina/__generated__/config/settings.yml
@@ -22,7 +22,7 @@ sections:
     name: cover
     path: content/cover
     templates:
-      - CoverPage
+      - coverPage
     type: directory
     create: documents
     match: '**/*.md'
